syntax = 'proto3';

package network;

option go_package = "github.com/habiliai/agentruntime/network";

import "google/protobuf/empty.proto";

service AgentNetwork {
  rpc GetAgentRuntimeInfo(GetAgentRuntimeInfoRequest) returns (GetAgentRuntimeInfoResponse);
  rpc RegisterAgent(RegisterAgentRequest) returns (google.protobuf.Empty);
  rpc DeregisterAgent(DeregisterAgentRequest) returns (google.protobuf.Empty);

  rpc CheckLive(CheckLiveRequest) returns (google.protobuf.Empty);
}

message CheckLiveRequest {
  repeated string names = 1;
}

message DeregisterAgentRequest {
  repeated string names = 3;
}

message RegisterAgentRequest {
  string addr = 1;
  bool secure = 2;
  repeated string names = 3;
}

message GetAgentRuntimeInfoRequest {
  repeated string names = 1;
  optional bool all = 2;
}

message GetAgentRuntimeInfoResponse {
  repeated AgentRuntimeInfo agent_runtime_info = 1;
}

message AgentRuntimeInfo {
  string addr = 2;
  bool secure = 3;
  repeated string agent_names = 4;
}