syntax = 'proto3';

package runtime;

option go_package = "github.com/habiliai/agentruntime/runtime";

service AgentRuntime {
  rpc Run(RunRequest) returns (RunResponse);
}

message RunRequest {
  uint32 thread_id = 1;
  repeated string agent_names = 2;
}

message RunResponse {
}
